--- a/src/main/resources/templates/admin/adminPage.html
+++ b/src/main/resources/templates/admin/adminPage.html
@@ -13,7 +13,6 @@
 <div class="d-flex">
     <div th:insert="~{fragments/sidebar :: sidebar}" class="bg-light p-3" style="width: 250px; min-height: 100vh;"></div>
 
-
     <div class="container mt-5">
         <h1 class="mb-4">Admin table</h1>
 
@@ -51,184 +50,28 @@
                             <td th:text="${user.age}"></td>
                             <td th:text="${user.email}"></td>
                             <td th:text="${user.isAdmin ? 'ADMIN' : 'USER'}"></td>
+                            <!-- кнопка для эдита-->
                             <td>
-                                <!-- кнопка для эдита-->
-                                <button class="btn btn-primary"
-                                        data-bs-toggle="modal"
-                                        th:data-bs-target="${'#editUserModal' + user.getId()}"
-                                        data-bs-dismiss="modal">Edit
-                                </button>
-
-                                <!-- модал для эдита-->
-                                <div class="modal fade" th:id="${'editUserModal' + user.id}" tabindex="-1" aria-hidden="true">
-                                    <div class="modal-dialog">
-                                        <div class="modal-content">
-                                            <div class="modal-header">
-                                                <h5 class="modal-title">Edit User</h5>
-                                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                            </div>
-                                            <div class="modal-body">
-                                                <form th:method="post" th:action="@{/admin/edit}" th:object="${user}">
-                                                    <div class="mb-3">
-                                                        <label for="idEdit" class="form-label">Id</label>
-                                                        <input type="number" class="form-control" th:value="${user.id}" name="id" id="idEdit" disabled/>
-                                                        <!-- это для того чтобы в пост передавался айди скрытое поле-->
-                                                        <input type="hidden" th:value="${user.id}" name="id"/>
-                                                    </div>
-                                                    <div class="mb-3">
-                                                        <label for="firstNameEdit" class="form-label">First Name</label>
-                                                        <input type="text" class="form-control" th:value="${user.name}" name="name" id="firstNameEdit"/>
-                                                    </div>
-                                                    <div class="mb-3">
-                                                        <label for="lastNameEdit" class="form-label">Last Name</label>
-                                                        <input type="text" class="form-control" th:value="${user.surname}" name="surname" id="lastNameEdit"/>
-                                                    </div>
-                                                    <div class="mb-3">
-                                                        <label for="ageEdit" class="form-label">Age</label>
-                                                        <input type="number" class="form-control" th:value="${user.age}" name="age" id="ageEdit"/>
-                                                    </div>
-                                                    <div class="mb-3">
-                                                        <label for="emailEdit" class="form-label">Email</label>
-                                                        <input type="email" class="form-control" th:value="${user.email}" name="email" id="emailEdit"/>
-                                                    </div>
-                                                    <div class="mb-3">
-                                                        <label for="passwordEdit" class="form-label">Password</label>
-                                                        <input type="password" class="form-control" name="password" id="passwordEdit"/>
-                                                    </div>
-                                                    <div class="mb-3">
-                                                        <label class="form-label">Role</label>
-                                                        <select multiple class="form-control form-control-sm mb-1"
-                                                                th:id="'roles_edit'+${user.getId()}"
-                                                                th:name="roles"
-                                                                size="2">
-                                                            <option th:each="role : ${roles}"
-                                                                    th:value="${role.id}"
-                                                                    th:text="${role.name}"
-                                                                    th:if="${role.name == 'ADMIN' || role.name == 'USER'}">
-                                                            </option>
-                                                        </select>
-                                                    </div>
-                                                    <div class="modal-footer">
-                                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                                                        <button type="submit" class="btn btn-primary">Save changes</button>
-                                                    </div>
-                                                </form>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
+                                <button class="btn btn-primary" data-bs-toggle="modal" th:data-bs-target="${'#editUserModal' + user.getId()}" data-bs-dismiss="modal">Edit</button>
+                                <div th:insert="~{admin/modal/editUserModal}"></div>
                             </td>
+                            <!-- кнопка для делита-->
                             <td>
-                                <!-- кнопка для делита-->
-                                <button class="btn btn-danger"
-                                        data-bs-toggle="modal"
-                                        th:data-bs-target="${'#deleteUserModal' + user.getId()}"
-                                        data-bs-dismiss="modal">Delete
-                                </button>
-
-                                <!-- модал для делита-->
-                                <div class="modal fade" th:id="${'deleteUserModal' + user.id}" tabindex="-1" aria-hidden="true">
-                                    <div class="modal-dialog">
-                                        <div class="modal-content">
-                                            <div class="modal-header">
-                                                <h5 class="modal-title">Delete User</h5>
-                                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                            </div>
-                                            <div class="modal-body">
-                                                <form th:method="post" th:action="@{/admin/delete}" th:object="${user}">
-                                                    <input type="hidden" name="id" th:value="${user.id}"/>
-                                                    <div class="mb-3">
-                                                        <label for="idDelete" class="form-label">Id</label>
-                                                        <input type="number" class="form-control" th:value="${user.id}" name="name" id="idDelete" disabled/>
-                                                    </div>
-                                                    <div class="mb-3">
-                                                        <label for="firstNameDelete" class="form-label">First Name</label>
-                                                        <input type="text" class="form-control" th:value="${user.name}" name="name" id="firstNameDelete" disabled/>
-                                                    </div>
-                                                    <div class="mb-3">
-                                                        <label for="lastNameDelete" class="form-label">Last Name</label>
-                                                        <input type="text" class="form-control" th:value="${user.surname}" name="surname" id="lastNameDelete" disabled/>
-                                                    </div>
-                                                    <div class="mb-3">
-                                                        <label for="ageDelete" class="form-label">Age</label>
-                                                        <input type="number" class="form-control" th:value="${user.age}" name="age" id="ageDelete" disabled/>
-                                                    </div>
-                                                    <div class="mb-3">
-                                                        <label for="emailDelete" class="form-label">Email</label>
-                                                        <input type="email" class="form-control" th:value="${user.email}" name="email" id="emailDelete" disabled/>
-                                                    </div>
-                                                    <div class="mb-3">
-                                                        <label class="form-label">Role</label>
-                                                        <select multiple class="form-control form-control-sm mb-1" th:id="'roles_edit'+${user.getId()}"
-                                                                th:name="roles" size="2" disabled>
-                                                            <option th:each="role : ${roles}"
-                                                                    th:value="${role.id}"
-                                                                    th:text="${role.name}"
-                                                                    th:if="${role.name == 'ADMIN' || role.name == 'USER'}">
-                                                            </option>
-                                                        </select>
-                                                    </div>
-                                                    <div class="modal-footer">
-                                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                                                        <form th:action="@{/admin/delete}" method="post">
-                                                            <input type="hidden" name="id" th:value="${user.id}" />
-                                                            <button class="btn btn-danger" type="submit">Delete</button>
-                                                        </form>
-                                                    </div>
-                                                </form>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
+                                <button class="btn btn-danger" data-bs-toggle="modal" th:data-bs-target="${'#deleteUserModal' + user.getId()}" data-bs-dismiss="modal">Delete</button>
+                                <div th:insert="~{admin/modal/deleteUserModal}"></div>
                             </td>
                         </tr>
                         </tbody>
                     </table>
                 </div>
             </div>
-
             <!-- Добавление юзера -->
-            <div class="tab-pane fade" id="new-user" role="tabpanel" aria-labelledby="new-user-tab">
-                <div class="mt-4">
-                    <form th:action="@{/admin/create}" method="post">
-                        <div class="mb-3">
-                            <label for="name" class="form-label">First Name</label>
-                            <input type="text" class="form-control" id="name" name="name" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="surname" class="form-label">Last Name</label>
-                            <input type="text" class="form-control" id="surname" name="surname" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="age" class="form-label">Age</label>
-                            <input type="number" class="form-control" id="age" name="age" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="email" class="form-label">Email</label>
-                            <input type="email" class="form-control" id="email" name="email" required>
-                            <div class="text-danger mt-2" th:if="${emailError}" th:text="'Такой email уже зарегистрирован'"></div>
-                        </div>
-                        <div class="mb-3">
-                            <label for="password" class="form-label">Password</label>
-                            <input type="password" class="form-control" id="password" name="password" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="roles" class="form-label">Role</label>
-                            <select id="roles" name="roles" class="form-select" required>
-                                <option th:each="role : ${roles}" th:value="${role.id}" th:text="${role.name}" th:if="${role.name == 'ADMIN' || role.name == 'USER'}"></option>
-                            </select>
-                        </div>
-                        <button type="submit" class="btn btn-primary">Создать</button>
-                    </form>
-                </div>
-            </div>
+            <div th:insert="~{admin/modal/createUserModal}"></div>
         </div>
     </div>
 </div>
 
-
-
-<!-- Подключаем скрипты Bootstrap -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
