--- a/src/main/resources/templates/adminPage.html
+++ b/src/main/resources/templates/adminPage.html
@@ -88,7 +88,7 @@
                 <div class="modal-dialog">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-title">Delete User</h5>
+                            <h5 class="modal-title">Edit User</h5>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body">
@@ -215,8 +215,6 @@
                     </form>
                 </div>
             </div>
-
-
         </div>
     </div>
 </div>
@@ -550,11 +548,6 @@
             window.location.href = 'http://localhost:8080/logout';  // Перенаправление на страницу выхода
         });
     });
-
-
-
-
-
 
 </script>
 
