--- a/src/main/resources/templates/adminPage.html
+++ b/src/main/resources/templates/adminPage.html
@@ -125,7 +125,7 @@
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                            <button type="button" class="btn btn-primary" id="confirmEditBtn">Edit</button>
+                            <button type="button" class="btn btn-primary" id="confirmEditBtn">Save changes</button>
                         </div>
                     </div>
                 </div>
